clean up of pages, images, index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <header>
   <nav class="navbar">
-    <a id="hamburger" href="#"><img src="images/icons/menu.png"></a>
+    <a id="hamburger" href="#"><img src="images/icons/menu.png" alt=""></a>
     <ul>
         <li class="home"><a href="index.html"><img src="images/icons/home.png" alt="home"></a></li>
         <li><a href="#aboutLink">About</a></li>
@@ -43,7 +43,7 @@
 <figure id="loadImage">
   <a href="https://commons.wikimedia.org/wiki/File:Quantum_Computing;_Ion_Trapping_(5941055642).jpg" target="_blank"
   title="National Institute of Standards and Technology [Public domain], via Wikimedia Commons">
-  <img id="qcImage" alt="Quantum Computing; Ion Trapping (5941055642)" src="images/quantum_computing.jpg">
+  <img id="qcImage" alt="Quantum Computing; Ion Trapping (5941055642)" src="images/quantum_computing_med.jpg">
     </a>
     <figcaption><a href="https://en.wikipedia.org/wiki/Trapped_ion_quantum_computer" target="_blank">Quantum computing in action!</a></figcaption>
 
@@ -53,11 +53,12 @@
 <section id="about">
 
   <div class="aboutImage">
-    <img src="images/headshot.jpg">
+    <img src="images/headshot_med.jpg" alt="headshot">
   </div>
   <div class="aboutText">
     <h2>About Me</h2>
-    <p>For many years, I worked in the public policy space, at a French-American nonprofit. While there, I spearheaded a series of conferences on cyber security—from the intersection of cyber security and privacy concerns to the impact of new technologies on cyber security.
+    <p>For many years, I worked in the public policy space, at a French-American nonprofit. While there, I spearheaded a series of conferences on cyber security,
+      including the impact of new technologies on the field.
       This followed a short stint in Thailand, directly after I finished a degree in international affairs.</p>
       <p>Based on a growing interest in technology, I decided to make a career switch and started to learn to program.</p>
       <p>One of the things I've most enjoyed learning about on my budding tech journey is quantum computing (hence the image <a href="#qcImage">above</a>).</p>
