--- a/pages/sql.html
+++ b/pages/sql.html
@@ -18,7 +18,7 @@
 
   <header>
     <nav class="navbar">
-      <a id="hamburger" href="#"><img src="../images/icons/menu.png"></a>
+      <a id="hamburger" href="#"><img src="../images/icons/menu.png" alt=""></a>
       <ul>
           <li class="home"><a href="../index.html"><img src="../images/icons/home.png" alt="home"></a></li>
           <li><a href="../index.html#aboutLink">About</a></li>
@@ -40,13 +40,13 @@
     <h1>Real Estate Database</h1>
 <div class="portfolioPage">
   <div class="portfolioImage">
-    <a href="../images/image1full.png" target="_blank"><img src="../images/image1.png"></a>
+    <a href="../images/image1full.png" target="_blank"><img src="../images/image1.png" alt=""></a>
   </div>
   <div class="portfolioText">
     <p> I built a real estate database to help a potential buyer track residential properties of interest,
         track appointments and store other useful information (such as listing agent contact details,
         information on the different localities and their respective tax rates).  Stored procedures were included to insert, update, and
-        delete records into the database.</p>
+        delete records in the database.</p>
     <p><img class="icon" src="../images/icons/computer.png" alt=""></p>
     <p>I used <strong>SQL Server</strong> for the underlying database and <strong>Java</strong> to
        create the Graphical User Interface (with the help of NetBeans).</p>
