--- a/pages/webpageLanding.html
+++ b/pages/webpageLanding.html
@@ -18,7 +18,7 @@
 
   <header>
     <nav class="navbar">
-      <a id="hamburger" href="#"><img src="../images/icons/menu.png"></a>
+      <a id="hamburger" href="#"><img src="../images/icons/menu.png" alt=""></a>
       <ul>
           <li class="home"><a href="../index.html"><img src="../images/icons/home.png" alt="home"></a></li>
           <li><a href="../index.html#aboutLink">About</a></li>
@@ -41,7 +41,7 @@
 <div class="portfolioPage">
 
   <div class="portfolioImage">
-    <a href="webpage/books.html" target="_blank"><img id="webpageImage" src="../images/image2.png"></a>
+    <a href="webpage/books.html" target="_blank"><img id="webpageImage" src="../images/image2.png" alt=""></a>
   </div>
   <div class="portfolioText">
     My very first website. My favorite part was making sure that the tables with book suggestions on the site worked on mobile (for example, see the <a href="webpage/classic_books.html">Classic Books page</a>). You can also click on the image to view the full site.
