--- a/pages/newsapp.html
+++ b/pages/newsapp.html
@@ -18,7 +18,7 @@
 
   <header>
     <nav class="navbar">
-      <a id="hamburger" href="#"><img src="../images/icons/menu.png"></a>
+      <a id="hamburger" href="#"><img src="../images/icons/menu.png" alt=""></a>
       <ul>
           <li class="home"><a href="../index.html"><img src="../images/icons/home.png" alt="home"></a></li>
           <li><a href="../index.html#aboutLink">About</a></li>
@@ -41,14 +41,15 @@
 <div class="portfolioPage">
 
   <div class="portfolioImage">
-    <a href="../images/image3.png" target="_blank"><img src="../images/image3.png"></a>
+    <a href="../images/image3.png" target="_blank"><img src="../images/image3.png" alt=""></a>
   </div>
   <div class="portfolioText">
-  <p> As part of a team, I helped develop a web-based app presenting a range of articles on different topics from different news sources, drawn from across the political spectrum (from Breitbart News to the New York Times!)
+  <p> As part of a team, I helped develop a web-based app presenting a range of articles on different topics from different news sources,
+    drawn from across the political spectrum (from <cite>Breitbart News</cite> to <cite>The New York Times</cite>).
     <p><img class="icon" src="../images/icons/computer.png" alt="">
 <p>The app was powered by News API (a RESTful API) to access the daily news. A <strong>MySQL</strong> database was used to store the articles,
   and article comparisons were coded in <strong>Java</strong>. The website was built with <strong>PHP</strong> (and some very simple <strong>HTML/CSS</strong>).
-<p><span class="iconText">See more on <a href="https://github.com/ofrancis0/CIS111B-NewsSourceProj" target="_blank">GitHub<img class="icon" src="../images/icons/github.png" alt="github"></a></span>
+<p><span class="iconText">See more on <a href="https://github.com/ofrancis0/CIS111B-NewsSourceProj" target="_blank">GitHub<img class="icon" src="../images/icons/github.png" alt=""></a></span>
 </div>
 
 
