--- a/pages/newsapp.html
+++ b/pages/newsapp.html
@@ -41,8 +41,14 @@
 <div class="portfolioPage">
 
   <div class="portfolioImage">
-    <a href="../images/image3.png" target="_blank"><img src="../images/image3.png" alt=""></a>
+    <img id="enlargeImg" src="../images/image3.png" alt="Web-based News App">
   </div>
+  <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
+  </div>
+
   <div class="portfolioText">
   <p> As part of a team, I helped develop a web-based app presenting a range of articles on different topics from different news sources,
     drawn from across the political spectrum (from <cite>Breitbart News</cite> to <cite>The New York Times</cite>).
@@ -60,7 +66,7 @@
 
 
 
-
+<script type="text/javascript" src="../js/modal.js"></script>
 
 </body>
 </html>
