--- a/pages/sql.html
+++ b/pages/sql.html
@@ -40,7 +40,12 @@
     <h1>Real Estate Database</h1>
 <div class="portfolioPage">
   <div class="portfolioImage">
-    <a href="../images/image1full.png" target="_blank"><img src="../images/image1.png" alt=""></a>
+    <img id="enlargeImg" src="../images/image1full.png" alt="Real Estate Database">
+  </div>
+  <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
   </div>
   <div class="portfolioText">
     <p> I built a real estate database to help a potential buyer track residential properties of interest,
@@ -62,6 +67,6 @@
 
 
 
-
+<script type="text/javascript" src="../js/modal.js"></script>
 </body>
 </html>
