--- a/pages/webpageLanding.html
+++ b/pages/webpageLanding.html
@@ -44,7 +44,8 @@
     <a href="webpage/books.html" target="_blank"><img id="webpageImage" src="../images/image2.png" alt=""></a>
   </div>
   <div class="portfolioText">
-    My very first website. My favorite part was making sure that the tables with book suggestions on the site worked on mobile (for example, see the <a href="webpage/classic_books.html">Classic Books page</a>). You can also click on the image to view the full site.
+    My very first website. My favorite part was making sure that the tables with book suggestions on the site worked on mobile
+    (for example, see the <a href="webpage/classic_books.html" target="_blank">Classic Books page</a>). You can also click on the image to view the full site.
 <p><img class="icon" src="../images/icons/computer.png" alt="">
 <p>Built using <strong>HTML/CSS</strong>, scaled for desktop and mobile devices. </p>
 </p>  </div>
