--- a/pages/sql.html
+++ b/pages/sql.html
@@ -56,6 +56,7 @@
     <p>I used <strong>SQL Server</strong> for the underlying database and <strong>Java</strong> to
        create the Graphical User Interface (with the help of NetBeans).</p>
     </p>
+    <p><span class="iconText">See more on <a href="https://github.com/ChrissaLP/real-estate-database" target="_blank">GitHub<img class="icon" src="../images/icons/github.png" alt=""></a></span>
   </div>
 </div>
 
