--- a/pages/sql.html
+++ b/pages/sql.html
@@ -22,7 +22,7 @@
       <ul>
           <li class="home"><a href="../index.html"><img src="../images/icons/home.png" alt="home"></a></li>
           <li><a href="../index.html#aboutLink">About</a></li>
-          <li class="dropdown"><a href="../index.html#portfolio">Projects &dArr</a>
+          <li class="dropdown"><a href="../index.html#portfolio">Projects &dArr;</a>
             <ul class="drop-nav">
               <li><a href="sql.html">Real Estate Database</a></li>
               <li><a href="webpageLanding.html">Books Website</a></li>
