add weatherApp to portfolio

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="pages/sql.html">Real Estate Database</a></li>
             <li><a href="pages/webpageLanding.html">Books Website</a></li>
             <li><a href="pages/newsapp.html">News App</a></li>
+            <li><a href="pages/weatherapp.html">Weather App</a></li>
           </ul>
         </li>
 
@@ -83,7 +84,12 @@
     <figure class="portfolioExample"><a href="pages/webpageLanding.html"><img src="images/image2sq.png" alt=""></a>
       <figcaption>Books for Girls website</figcaption>
     </figure>
-    <figure class="portfolioExample"><a href="pages/newsapp.html"><img src="images/image3sq.png" alt=""></a><figcaption>Web-based News App</figcaption></figure>
+    <figure class="portfolioExample"><a href="pages/newsapp.html"><img src="images/image3sq.png" alt=""></a>
+      <figcaption>Web-based News App</figcaption>
+    </figure>
+    <figure class="portfolioExample"><a href="pages/weatherapp.html"><img src="images/weatherAppsq.png" alt=""></a>
+      <figcaption>Weather App (React)</figcaption>
+    </figure>
   </div>
 </section>
 
