--- a/pages/newsapp.html
+++ b/pages/newsapp.html
@@ -27,6 +27,7 @@
               <li><a href="sql.html">Real Estate Database</a></li>
               <li><a href="webpageLanding.html">Books Website</a></li>
               <li><a href="newsapp.html">News App</a></li>
+              <li><a href="weatherapp.html">Weather App</a></li>
             </ul>
           </li>
 
