--- a/pages/weatherapp.html
+++ b/pages/weatherapp.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title>SQL Project</title>
+<title>Weather App</title>
 
 
 <link href="../css/home.css" rel="stylesheet" />
@@ -38,10 +38,10 @@
   </header>
 
 <main class="siteContent">
-    <h1>Real Estate Database</h1>
+    <h1>Weather App: "It's Always Sunny in Philadelphia"</h1>
 <div class="portfolioPage">
   <div class="portfolioImage">
-    <img id="enlargeImg" src="../images/image1full.png" alt="Real Estate Database">
+    <img id="enlargeImg" src="../images/weatherAppfull.png" alt="Weather App">
   </div>
   <div id="myModal" class="modal">
     <span class="close">&times;</span>
@@ -49,15 +49,13 @@
     <div id="caption"></div>
   </div>
   <div class="portfolioText">
-    <p> I built a real estate database to help a potential buyer track residential properties of interest,
-        track appointments and store other useful information (such as listing agent contact details,
-        information on the different localities and their respective tax rates).  Stored procedures were included to insert, update, and
-        delete records in the database.</p>
+    <p> This is my first foray into React, which I used to build a very basic weather app! It's still very much a work in progress, but
+      it does allow a user to get a week's worth of weather forecasts for a location in the U.S. Weather data is courtesy of <a href="https://www.weatherbit.io" target="_blank">
+        Weatherbit.io</a>.</p>
     <p><img class="icon" src="../images/icons/computer.png" alt=""></p>
-    <p>I used <strong>SQL Server</strong> for the underlying database and <strong>Java</strong> to
-       create the Graphical User Interface (with the help of NetBeans).</p>
+    <p>Built using <strong>React</strong>.</p>
     </p>
-    <p><span class="iconText">See more on <a href="https://github.com/ChrissaLP/real-estate-database" target="_blank">GitHub<img class="icon" src="../images/icons/github.png" alt=""></a></span>
+    <p><span class="iconText">See more on <a href="https://github.com/ChrissaLP/real-estate-database" target="_blank">GitHub (not up yet!)<img class="icon" src="../images/icons/github.png" alt=""></a></span>
   </div>
 </div>
 
