add link to github for weather app

--- a/pages/weatherapp.html
+++ b/pages/weatherapp.html
@@ -54,7 +54,8 @@
         Weatherbit.io</a>.</p>
     <p><img class="icon" src="../images/icons/computer.png" alt=""></p>
     <p>Built using <strong>React</strong>.</p>
-    </p>
+    <p><span class="iconText">See more on <a href="https://github.com/ChrissaLP/react-weather-app" target="_blank">
+      GitHub<img class="icon" src="../images/icons/github.png" alt=""></a></span></p>
   </div>
 </div>
 
