update weather app images

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <figure class="portfolioExample"><a href="pages/newsapp.html"><img src="images/image3sq.png" alt=""></a>
       <figcaption>Web-based News App</figcaption>
     </figure>
-    <figure class="portfolioExample"><a href="pages/weatherapp.html"><img src="images/weatherAppsq.png" alt=""></a>
+    <figure class="portfolioExample"><a href="pages/weatherapp.html"><img src="images/weatherAppsq2.png" alt=""></a>
       <figcaption>Weather App (React)</figcaption>
     </figure>
   </div>
