--- a/pages/weatherapp.html
+++ b/pages/weatherapp.html
@@ -41,7 +41,7 @@
     <h1>Weather App: "It's Always Sunny in Philadelphia"</h1>
 <div class="portfolioPage">
   <div class="portfolioImage">
-    <img id="enlargeImg" src="../images/weatherAppfull.png" alt="Weather App">
+    <img id="enlargeImg" src="../images/weatherAppfull2.png" alt="Weather App">
   </div>
   <div id="myModal" class="modal">
     <span class="close">&times;</span>
