add link to weather app

--- a/pages/weatherapp.html
+++ b/pages/weatherapp.html
@@ -41,7 +41,7 @@
     <h1>Weather App: "It's Always Sunny in Philadelphia"</h1>
 <div class="portfolioPage">
   <div class="portfolioImage">
-    <img id="enlargeImg" src="../images/weatherAppfull2.png" alt="Weather App">
+    <img id="enlargeImg" src="../images/weatherAppfull3.png" alt="Weather App">
   </div>
   <div id="myModal" class="modal">
     <span class="close">&times;</span>
@@ -54,7 +54,8 @@
         Weatherbit.io</a>.</p>
     <p><img class="icon" src="../images/icons/computer.png" alt=""></p>
     <p>Built using <strong>React</strong>.</p>
-    <p><span class="iconText">See more on <a href="https://github.com/ChrissaLP/react-weather-app" target="_blank">
+    <p><span class="iconText">Access the app <a href="https://react-weather-app-clp.herokuapp.com/" target="_blank">here</a>
+      or see more on <a href="https://github.com/ChrissaLP/react-weather-app" target="_blank">
       GitHub<img class="icon" src="../images/icons/github.png" alt=""></a></span></p>
   </div>
 </div>
