--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <title>Portfolio</title>
 
-
+<link rel="icon" type="image/png" href="images/favicon1.png" />
 <link href="css/home.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
