small updates for favicon

--- a/pages/weatherapp.html
+++ b/pages/weatherapp.html
@@ -9,7 +9,7 @@
 
 <title>Weather App</title>
 
-
+<link rel="icon" type="image/png" href="../images/icons/favicon.png" />
 <link href="../css/home.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
 </head>
